name:                ghissue
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/johnynek/ghissue#readme
license:             BSD3
license-file:        LICENSE
author:              P. Oscar Boykin
maintainer:          oscar.boykin@gmail.com
copyright:           2015 P. Oscar Boykin
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Ghissue,
                       Ghissue.Command.Show
  build-depends:       base >= 4.7 && < 5
                     , github == 0.13.2
                     , optparse-applicative >= 0.11.0.0
                     , mtl >= 2.2.0
                     , split >= 0.2.0
  default-language:    Haskell2010

executable ghissue-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ghissue
                     , github == 0.13.2
  default-language:    Haskell2010

test-suite ghissue-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ghissue
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/johnynek/ghissue
